# server-monitor

./: .gitignore  Jenkinsfile  README.md  dev.sh  docker-compose.jenkins.yml  docker-compose.yml.template  jenkins.Dockerfile
rust_server/: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  requirements.txt
rust_server/.sqlx/: query-02b6dfb84b6c80e991bc645ea4829accd3c83cc2e4137167e867c6eb8301ccaf.json  query-037cf619b3c4712e9647f35984f1f470ee0448e2f93f0df0ea5c9119f1bf7749.json  query-0bee598bb0b59f3255dba49cc5753673a9190be3892e6c2c090bb54e8a6e7754.json  query-1c808d043e72c94dad83e4ed29dfb3b3d0252e306adb7fa40eb17ab0ab764f1f.json  query-1f43827d6b8b404fcb4b0e5a271e65bb83ab3653c05aac13f0833785595ab24d.json  query-2029d8aac2c7d83a347ea8ff5ece3579f40998f1748a3f0c77be54edd595db36.json  query-21cc8425e922239621538b5eb88464142abff0af2623af5354ecf5a3c13f3b38.json  query-22104b41e7b4c01f9c902b94b9b5572b15f0c9353aee33b22fb2d00dd441f800.json  query-221e5e890092e12f58f330cbcd52a911dee11c5de9288070992287179ef3e06a.json  query-344a3b02ddd455b6059f6637368f0c8651332acfaefeba1f3d9ec363d1782e9c.json  query-3f71806ad75e19453a6a365e8b92b65d6fd2ee0c5438a9442a9fa97e804e9b54.json  query-47a9bb1cd94a79c09f384b3073ed39d4fa3b2840215b4b7b6430842d797a797d.json  query-4de0f5a12061f7dce5374de6b1d292c1cef93b6b25a0572c404f04c09775b823.json  query-5a358226bea33b249c0981dcee64949a6c6dd9d1aacbd686785de414a1de19d3.json  query-6532e65e005c14e8f7fa2e858a7bcceebf3efdbc204608d76d4f4747bd96753e.json  (+14 more)
rust_server/docs/: DATABASE.md
rust_server/src/: config.rs  (+3 more)
(+276 files in other folders)
