[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_server"
path = "src/lib.rs"

[[bin]]
name = "rust_server"
path = "src/main.rs"

[dependencies]
idna = "0.3"

# 웹 프레임워크 & 서버
actix-web = "4.4"
actix = "0.13"
actix-web-actors = "4.0"
actix-cors = "0.6"
actix-service = "2.0"

# 비동기 런타임
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# 데이터베이스
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "runtime-tokio-native-tls",
    "postgres",
    "time",
    "chrono",
    "json",
    "uuid",
    "migrate"
]}

# SSH 연결
ssh2 = { version = "0.9", features = ["vendored-openssl"] }

# 인증
jsonwebtoken = "9.1"
bcrypt = "0.15"
reqwest = { version = "0.11", features = ["json"] }

# 시리얼라이제이션
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 시간 관련
chrono = { version = "0.4", features = ["serde"] }

# 유틸리티
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"

# 로깅
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env_logger = "0.10"
log = "0.4"

# 시스템 모니터링
sysinfo = "0.29"

# OpenAPI/Swagger
utoipa = { version = "4.1", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "5.0", features = ["actix-web"] }

config = "0.13"